--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -1,7 +1,6 @@
 <RelativeLayout
     android:id="@+id/mainView"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,45 +12,34 @@
 
     <TextView
         android:id="@+id/quote"
+        android:theme="@style/quote"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="@color/colorUpperBackground"
-        android:padding="10dp"
         android:layout_below="@+id/toolbar" />
 
     <ListView
         android:id="@+id/story_list"
+        android:theme="@style/rows"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:divider="@color/ColorPrimaryDark"
-        android:headerDividersEnabled="true"
-        android:footerDividersEnabled="true"
-        android:dividerHeight="1dp"
-        android:background="@color/colorLowerBackground"
         android:layout_below="@id/quote"/>
 
     <TextView
         android:id="@+id/empty"
-        android:layout_width="wrap_content"
+        android:theme="@style/empty_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_margin="50dp"
-        android:drawableTop="@drawable/open_book"
-        android:drawablePadding="10dp"
         android:text="@string/empty"
-        android:textSize="20sp"
         android:layout_below="@id/quote" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
+        android:theme="@style/fab_regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:src="@drawable/ic_add"
-        app:layout_anchorGravity="bottom|right|end"
-        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true" />
 </RelativeLayout>
