--- a/app/src/main/res/drawable/list_shape.xml
+++ b/app/src/main/res/drawable/list_shape.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#E8EAF6"
-        android:endColor="#E8EAF6"
+        android:startColor="@color/colorPrimary"
+        android:endColor="@color/colorPrimary"
         android:angle="225"/>
 
     <corners
-        android:bottomRightRadius="5dp"
-        android:bottomLeftRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp"/>
+        android:bottomRightRadius="145dp"
+        android:bottomLeftRadius="145dp"
+        android:topLeftRadius="145dp"
+        android:topRightRadius="145dp"/>
 </shape>
