--- a/app/src/main/res/layout/activity_add_plot.xml
+++ b/app/src/main/res/layout/activity_add_plot.xml
@@ -3,79 +3,81 @@
     android:id="@+id/add_plotline"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/plot_instructions"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/activity_add_plot_top"
+        android:theme="@style/text_header"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:drawableStart="@drawable/ic_plotline"
-        android:paddingBottom="20dp"
-        android:textSize="20sp"
-        android:text="@string/plot_instructions"/>
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/plot_instructions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_plotline"
+            android:text="@string/plot_instructions"/>
+
+    </LinearLayout>
 
     <CheckBox
         android:id="@+id/main_plot_checkbox"
+        android:theme="@style/radio_buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/plot_main"
         android:onClick="mPlotline"
-        android:layout_below="@+id/plot_instructions"/>
+        android:layout_below="@+id/activity_add_plot_top"/>
 
     <EditText
         android:id="@+id/sb_plotline_name"
+        android:theme="@style/list_items"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/main_plot_checkbox"
-        android:paddingBottom="20dp"
         android:hint="@string/plot_title" />
 
     <EditText
         android:id="@+id/sb_plotline"
+        android:theme="@style/list_items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
         android:layout_below="@+id/sb_plotline_name"
         android:hint="@string/plot_desc" />
 
     <EditText
         android:id="@+id/sb_plotline_notes"
+        android:theme="@style/list_items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
         android:layout_below="@id/sb_plotline"
         android:hint="@string/plot_notes" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:layout_below="@id/sb_plotline_notes"
         android:gravity="end|bottom">
 
         <Button
             android:id="@+id/plot_cancel"
+            android:theme="@style/button_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             style="?android:attr/borderlessButtonStyle"
-            android:background="@color/white"
-            android:textColor="@color/colorPopupTextHint"
             android:text="@string/cancel"/>
 
         <Button
             android:id="@+id/add_the_plotline"
+            android:theme="@style/button_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             style="?android:attr/borderlessButtonStyle"
-            android:background="@color/colorPopUp"
             android:text="@string/plot_add" />
     </LinearLayout>
 
