--- a/app/src/main/res/layout/fragment_add_places.xml
+++ b/app/src/main/res/layout/fragment_add_places.xml
@@ -5,17 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
     tools:context=".fragments.AddPlaces">
 
     <ListView
         android:id="@+id/places_listview"
+        android:theme="@style/rows"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        android:divider="@color/white"
-        android:headerDividersEnabled="true"
-        android:footerDividersEnabled="true"
-        android:dividerHeight="2dp"
-        android:background="@color/colorLowerBackground" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
