--- a/app/src/main/res/layout/fragment_sbdialog.xml
+++ b/app/src/main/res/layout/fragment_sbdialog.xml
@@ -8,35 +8,34 @@
     android:orientation="vertical">
 
     <TextView
+        android:theme="@style/text_popup"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/dialog_instructions"
         android:drawableStart="@drawable/ic_create_story"
-        android:gravity="center"
-        android:textColor="@color/colorPopupText"
-        android:textSize="25sp" />
+        android:drawablePadding="5dp"
+        android:gravity="center" />
 
     <EditText
         android:id="@+id/sb_title"
+        android:theme="@style/text_popupHint"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/colorPopupTextHint"
         android:hint="@string/dialog_title" />
 
     <Spinner
         android:id="@+id/sb_genre"
+        android:theme="@style/text_popupHint"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_dialog_genre"
-        android:textColorHint="@color/colorPopupTextHint"
-        android:hint="@string/dialog_genre"
-        android:layout_margin="15dp" />
+        android:hint="@string/dialog_genre" />
 
     <EditText
         android:id="@+id/sb_notes"
+        android:theme="@style/text_popupHint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/colorPopupTextHint"
         android:hint="@string/dialog_desc" />
 
 
