--- a/app/src/main/res/layout/tab_view.xml
+++ b/app/src/main/res/layout/tab_view.xml
@@ -11,46 +11,34 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/name_info"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:gravity="start"
-        android:textSize="20sp"
-        android:textColor="@color/black" />
+        <ImageView
+            android:id="@+id/tab_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/list_shape" />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:background="@color/ColorPrimaryDark" />
+        <TextView
+            android:id="@+id/name_info"
+            android:theme="@style/list_items"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="start" />
 
-
-    <TextView
-        android:id="@+id/extra_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:gravity="center_horizontal"
-        android:textSize="18sp"
-        android:textColor="@color/black" />
-
+        <TextView
+            android:id="@+id/extra_info"
+            android:theme="@style/text_subheader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/desc"
+        android:theme="@style/text_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textSize="15sp"
-        android:textColor="@color/black"/>
+        android:layout_marginRight="10dp" />
 
 </LinearLayout>
