--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -3,24 +3,17 @@
     android:id="@+id/story_creation_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="tahastudio.storybuilder.ShowStory">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
-
     <LinearLayout
         android:id="@+id/story_creation_textview"
-        android:theme="@style/text_header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:layout_below="@+id/toolbar">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/story_title"
@@ -32,36 +25,29 @@
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
-        android:theme="@style/tablayout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_below="@+id/story_creation_textview" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
-        android:theme="@style/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tab_layout" />
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/fab"
-        android:theme="@style/fab_theme"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_width="wrap_content"
-        app:fab_addButtonColorPressed="@color/colorPrimaryDark"
-        app:fab_addButtonColorNormal="@color/colorPrimary"
         android:layout_height="wrap_content">
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/characters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_addButtonColorPressed="@color/colorPrimaryDark"
-            app:fab_addButtonColorNormal="@color/colorPrimary"
             android:title="@string/add_character"
             android:clickable="true" />
 
@@ -69,8 +55,6 @@
             android:id="@+id/places"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_addButtonColorPressed="@color/colorPrimaryDark"
-            app:fab_addButtonColorNormal="@color/colorPrimary"
             android:title="@string/add_place"
             android:clickable="true" />
 
@@ -78,8 +62,6 @@
             android:id="@+id/plots"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_addButtonColorPressed="@color/colorPrimaryDark"
-            app:fab_addButtonColorNormal="@color/colorPrimary"
             android:title="@string/add_plot"
             android:clickable="true" />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
