--- a/app/src/main/res/layout/tab_view.xml
+++ b/app/src/main/res/layout/tab_view.xml
@@ -1,44 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/tab_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/divider">
 
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/card_list">
 
-        <ImageView
-            android:id="@+id/tab_image"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/list_shape" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/name_info"
-            android:theme="@style/list_items"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="start" />
+            <TextView
+                android:id="@+id/name_info"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="start|center_vertical"
+                android:textAllCaps="true"
+                android:textColor="@color/primary_text" />
+
+
+            <TextView
+                android:id="@+id/desc"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="start|center_vertical"
+                android:textColor="@color/secondary_text"
+                android:paddingTop="10dp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/extra_info"
-            android:theme="@style/text_subheader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="start|center_vertical"
+            android:textColor="@color/secondary_text"
             android:paddingTop="10dp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/desc"
-        android:theme="@style/text_body"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
-
-</LinearLayout>
+</RelativeLayout>
