--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="secondary_text">#727272</color>
     <color name="icons">#388E3C</color>
     <color name="cards">#F9F9F9</color>
-    <color name="divider">#B6B6B6</color>
+    <color name="divider">#F9F9F9</color>
 </resources>
