--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -13,7 +13,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@+id/tab_layout">
 
         <TextView
             android:id="@+id/story_title"
@@ -25,9 +26,9 @@
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
+        android:theme="@style/Tabs"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/story_creation_textview" />
+        android:layout_width="match_parent" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
