--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style name="Headers" parent="StoryBuilderTheme">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/primary_text_light</item>
-        <item name="android:background">@color/primary_header</item>
+        <item name="android:background">@color/accent</item>
         <item name="android:padding">20dp</item>
         <item name="android:textAlignment">center</item>
     </style>
@@ -43,6 +43,14 @@
         <item name="android:background">@color/primary</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:layout_marginRight">5dp</item>
+    </style>
+
+    <style name="Tabs" parent="StoryBuilderTheme">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/primary_text_light</item>
+        <item name="android:background">@color/accent</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
 
